# yolov5n-armv7

./: CMakeLists.txt  README.md
lib/opencv-4/lib/: libopencv_aruco.so.4.5.5  libopencv_barcode.so.4.5.5  libopencv_bgsegm.so.4.5.5  libopencv_bioinspired.so.4.5.5  libopencv_calib3d.so.4.5.5  libopencv_ccalib.so.4.5.5  libopencv_core.so.4.5.5  libopencv_datasets.so.4.5.5  libopencv_dnn.so.4.5.5  libopencv_dnn_objdetect.so.4.5.5  libopencv_dnn_superres.so.4.5.5  libopencv_dpm.so.4.5.5  libopencv_face.so.4.5.5  libopencv_features2d.so.4.5.5  libopencv_flann.so.4.5.5  libopencv_fuzzy.so.4.5.5  libopencv_gapi.so.4.5.5  libopencv_hfs.so.4.5.5  libopencv_highgui.so.4.5.5  libopencv_img_hash.so.4.5.5  libopencv_imgcodecs.so.4.5.5  libopencv_imgproc.so.4.5.5  libopencv_intensity_transform.so.4.5.5  libopencv_line_descriptor.so.4.5.5  libopencv_mcc.so.4.5.5  libopencv_ml.so.4.5.5  libopencv_objdetect.so.4.5.5  libopencv_optflow.so.4.5.5  libopencv_phase_unwrapping.so.4.5.5  libopencv_photo.so.4.5.5  libopencv_plot.so.4.5.5  libopencv_quality.so.4.5.5  libopencv_rapid.so.4.5.5  libopencv_reg.so.4.5.5  libopencv_rgbd.so.4.5.5  libopencv_saliency.so.4.5.5  libopencv_shape.so.4.5.5  libopencv_stereo.so.4.5.5  libopencv_stitching.so.4.5.5  libopencv_structured_light.so.4.5.5  (+12 more)
lib/opencv-4/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
models/: best.pt  classes_name.txt
src/: main.cpp  main.cpp.save  main.cpp.save.1
